scrollbar fixed

--- a/search.css
+++ b/search.css
@@ -63,11 +63,8 @@ table{
 	text-align:center;
 	font-size:20px;
 	max-width:80%;
-	max-height:90%;
+	max-height:70%;
 	background-color:rgba(255,255,255,0.9);
-	overflow-y:hidden;
+	overflow-y:auto;
 	margin-left:10%;
-}
-.hidden{
- display:none;   
 }
